--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
   <!-- header start -->
 
   <header>
-    <a href="#" class="logo"><img src="images/Brown Mascot Lion Free Logo_transparent.png" alt=""></a>
+    <a href="#" class="logo">
+      <img src="images/Brown Mascot Lion Free Logo_transparent.png" alt=""></a>
     <i id="menu-icon" class="fa-solid fa-bars"></i>
     <ul class="navbar">
       <li><a href="#home">Home</a></li>
       <li><a href="#hakkimda">About</a></li>
       <li><a href="#services">Services</a></li>
       <li><a href="#contact">Contact</a></li>
-
+    </ul>
   </header>
   <!-- header end -->
   <!-- home start -->
@@ -47,61 +48,63 @@
     <div class="hakkimda-container">
       <div class="hakkimda-metin">
         <h2>Hakkımda</h2>
-        <p>Hello, I am Emircan Suyabatmaz, 20 years old, and I am studying Political Science at Akdeniz University. If I were to briefly describe myself, I possess skills in leadership, decision-making, public speaking, actively listening to and understanding people, empathy, having ethical values, and problem-solving abilities.</p>
+        <p>Hello, I am Emircan Suyabatmaz, 20 years old, and I am studying Political Science at Akdeniz University. If I
+          were to briefly describe myself, I possess skills in leadership, decision-making, public speaking, actively
+          listening to and understanding people, empathy, having ethical values, and problem-solving abilities.</p>
       </div>
     </div>
   </section>
-</section>
   <!-- about end   -->
   <!-- services start -->
-<section class="services" id="services">
-  <h2>Services</h2>
-  <div class="services-container">
-    <div class="service">
-      <i class="fas fa-code"></i>
-      <h5>Web Development</h5>
-      <p>We design and develop responsive and user-friendly websites using modern technologies.</p>
+  <section class="services" id="services">
+    <h2>Services</h2>
+    <div class="services-container">
+      <div class="service">
+        <i class="fas fa-code"></i>
+        <h5>Web Development</h5>
+        <p>We design and develop responsive and user-friendly websites using modern technologies.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-paint-brush"></i>
+        <h5>UI/UX Design</h5>
+        <p>We create visually appealing user interfaces and enhance user experience.</p>
+      </div>
+      <div class="service">
+        <i class="fas fa-chart-line"></i>
+        <h5>SEO Optimization</h5>
+        <p>We optimize websites for search engines to improve visibility and rankings.</p>
+      </div>
     </div>
-    <div class="service">
-      <i class="fas fa-paint-brush"></i>
-      <h5>UI/UX Design</h5>
-      <p>We create visually appealing user interfaces and enhance user experience.</p>
+  </section>
+  <!-- services end -->
+  <!-- contact start -->
+  <section class="contact" id="contact">
+    <h2>Contact</h2>
+    <div class="contact-container">
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3190.78620114995!2d30.648497975842776!3d36.89546262222004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14c391c53b7d6dab%3A0x319c116c8ca46868!2sAkdeniz%20%C3%9Cniversitesi%20%C4%B0ktisadi%20Ve%20%C4%B0dari%20Bilimler%20Fak%C3%BCltesi!5e0!3m2!1str!2str!4v1693181141935!5m2!1str!2str"></iframe>
+      </div>
+      <div class="contact-info">
+        <ul>
+          <li><i class="fas fa-envelope"></i> info@emircansuyabatmaz.com
+          </li>
+          <li><i class="fas fa-phone"></i> 5515988306</li>
+        </ul>
+      </div>
     </div>
-    <div class="service">
-      <i class="fas fa-chart-line"></i>
-      <h5>SEO Optimization</h5>
-      <p>We optimize websites for search engines to improve visibility and rankings.</p>
+  </section>
+  <!-- contact end -->
+  <!-- footer start -->
+  <footer class="footer">
+    <div class="social-icons">
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
     </div>
-  </div>
-</section>
-<!-- services end -->
-<!-- contact start -->
-<section class="contact" id="contact">
-  <h2>Contact</h2>
-  <div class="contact-container">
-    <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3190.78620114995!2d30.648497975842776!3d36.89546262222004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14c391c53b7d6dab%3A0x319c116c8ca46868!2sAkdeniz%20%C3%9Cniversitesi%20%C4%B0ktisadi%20Ve%20%C4%B0dari%20Bilimler%20Fak%C3%BCltesi!5e0!3m2!1str!2str!4v1693181141935!5m2!1str!2str"></iframe>
-    </div>
-    <div class="contact-info">
-      <ul>
-        <li><i class="fas fa-envelope"></i> info@emircansuyabatmaz.com
-        </li>
-        <li><i class="fas fa-phone"></i> 5515988306</li>
-      </ul>
-    </div>
-  </div>
-</section>
-<!-- contact end -->
-<!-- footer start -->
-<footer class="footer">
-  <div class="social-icons">
-    <a href="#"><i class="fab fa-linkedin"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-  </div>
-  <p>&copy; 2023 Emircan Suyabatmaz</p>
-</footer>
-<!-- footer end -->
+    <p>&copy; 2023 Emircan Suyabatmaz</p>
+  </footer>
+  <!-- footer end -->
 
 
 
