--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section class="hakkimda" id="hakkimda">
     <div class="hakkimda-container">
       <div class="hakkimda-metin">
-        <h2>Hakkımda</h2>
+        <h2>About</h2>
         <p>Hello, I am Emircan Suyabatmaz, 20 years old, and I am studying Political Science at Akdeniz University. If I
           were to briefly describe myself, I possess skills in leadership, decision-making, public speaking, actively
           listening to and understanding people, empathy, having ethical values, and problem-solving abilities.</p>
